# RemoteSync

./: Cargo.toml  config.toml
client/: Cargo.toml
client/src/: main.rs
client/src/network/: file.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs  models.rs
server/src/service/: file.rs  mod.rs
