[workspace]
resolver = "3"
members = ["client", "server"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.21"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
serde_json = "1.0.149"


[workspace.package]
authors = ["Ricky1911"]
