[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
config.workspace = true
flate2 = { version = "1.1.9", features = ["zlib-rs"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde.workspace = true
tokio.workspace = true
tokio-util = "0.7.18"
